--- a/style.css
+++ b/style.css
@@ -3,68 +3,40 @@ body {
 	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 	font-size: 18px;
 	line-height: 32px;
-	background-color: #777;
+	background: #777;
+	color: #777;
 	margin: auto;
 
 }
 
-header {
-	display: block
-	background-color: #ebebeb;
-	color: #777;
-	text-align: center;
-	line-height: 25px;
-	border: hidden 3px;
-	margin-bottom: 10px solid;
-	padding: 10px;
-
-}
-
-nav {
+header, nav, section, footer {
 	display: block;
-	background-color: #ebebeb;
-	color: #777;
+	padding: 10px;
+	margin: 10px;
+	background: #ebebeb;
 	text-align: center;
-	line-height: 25px;
-	border: hidden 3px;
-	margin: auto;
-	padding: 20px;
 }
 
 section {
 	display: block;
-	background-color: #ebebeb;
-	color: #777;
-	text-align: center;
 	width: 495px;
 	float: left;
-	border: hidden 5px;
-	margin: auto;
-	padding-top: 20px;
-	height: 250px
+	overflow: hidden;
+	height: 267px
 }
 
 article {
-	background-color: #777;
+	background: #777;
 	color: #ebebeb;
-	text-align: center;
-	line-height: 25px;
-	margin: auto;
 	padding: 10px;
-	
 }
 
 aside {
 	display: block;
-	width: 420px;
-	background-color: #ebebeb;
-	color: #777;
-	text-align: center;
-	line-height: 25px;
+	width: 40%;
 	float: right;
-	height: 250px
-	margin: auto;
-	padding: 20px
+	height: 267px;
+	overflow: hidden;
 	 }
 
 footer {
@@ -72,10 +44,18 @@ footer {
 	background-color: #ebebeb;
 	color: #777;
 	text-align: center;
-	line-height: 25px;
-	margin: auto;
-	padding-top: 15px;
+	line-height: 32px;
+	margin: 10px;
+	padding: 10px;
 }
-footer.clear {
+
+.clear {
 	clear: both;
+}
+h1, p {
+	padding: 10px;
+	margin: 10px;
+	background: #ebebeb;
+	color: #777;
+	width: 90%;
 }
